[package]
name = "range-map"
version = "0.1.1"
authors = ["Joe Neeman <joeneeman@gmail.com>"]
description = "Maps and sets implemented using ranges."
documentation = "http://jneem.github.io/range-map"
repository = "http://github.com/jneem/range-map"
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
itertools = "0.4"
num = "0.1"

[dev-dependencies]
quickcheck = "0.2"
